# coredns-analyzer

./: Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: rust.yml
src/: config.rs  index.html  log_analyzer.rs  main.rs  tlds.rs  tui.rs
