[package]
name = "coredns-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Winter"]

[dependencies]
clap = { version = "4.5.27", features = ["derive", "env"] }
axum = { version = "0.8.1", features = ["macros", "ws"] }
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
tokio = { version = "1.43", features = ["full"] }
serde_json = "1.0.137"
futures = "0.3"
anyhow = "1.0.95"
regex = "1.11.1"
lazy_static = "1.4.0"
serde = "1.0.217"
env_logger = "0.11.6"
log = "0.4.25"

[build-dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }