[package]
name = "scope-rs"
version = "0.1.0"
edition = "2024"
authors = ["Dominik Winter", "Matteo Bigoi"]

[dependencies]
clap = { version = "4.5.45", features = ["derive", "env"] }
axum = { version = "0.8.4", features = ["macros", "ws"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25", features = ["v1_31"] }
tokio = { version = "1.47", features = ["full"] }
serde_json = "1.0.143"
futures = "0.3.31"
anyhow = "1.0.99"
regex = "1.11.1"
lazy_static = "1.5.0"
serde = "1.0.219"
env_logger = "0.11.8"
log = "0.4.27"
ratatui = { version = "0.29", default-features = false, features = [
    "crossterm",
] }
crossterm = "0.29"
thiserror = "2"
unicode-width = "0.2"
once_cell = "1"
indexmap = "2"
itertools = "0.14.0"
rand = "0.9.2"
num-traits = "0.2"
keyframe = "1"
easing = "0.0.5"

[build-dependencies]
reqwest = { version = "0.12.23", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
